fix-overflow-calteller

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,17 @@
     --second-color: #212C4D;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.main-content::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.main-content {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
 html {
     font-family: sans-serif;
     background-color: var(--bg-color);
@@ -50,6 +61,7 @@ body {
 
 .navBar {
     height: 90%;
+    margin-top: 20px;
     width: 160px;
     position: fixed;
     z-index: 1;
@@ -73,6 +85,7 @@ body {
 
 
 .main-content {
+    position: fixed;
     margin-left: 220px;
     margin-top: 20px;
     width: 80%;
@@ -82,6 +95,11 @@ body {
     box-shadow: 7px 7px 33px 4px var(--second-color);
     border-radius: 15px 15px 15px 15px;
     border: 4px solid var(--second-color);
+    overflow-y: scroll;
+}
+
+.main-content button {
+    margin-bottom: 20px;
 }
 
 h1,
